CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_IOS YES)
IF(CMAKE_IOS)
SET (CMAKE_SYSTEM_NAME Generic)
SET (CMAKE_SYSTEM_VERSION 1)
SET (CMAKE_SYSTEM_PROCESSOR arm)
SET (CMAKE_C_COMPILER "arm-apple-darwin9-gcc")
SET (CMAKE_CXX_COMPILER "arm-apple-darwin9-g++")
SET (CMAKE_EXE_LINKER_FLAGS "-framework Foundation -framework AudioToolbox -framework CoreFoundation -framework CoreGraphics -framework SystemConfiguration -framework UIKit -framework QuartzCore -L/home/anton/iphone/lib -w -bind_at_load -shared")
SET (LIBS stdc++ objc curl-static.a z)
AUX_SOURCE_DIRECTORY(http SOURCES)
AUX_SOURCE_DIRECTORY(gui SOURCES)
ELSE(CMAKE_IOS)
SET (CMAKE_EXE_LINKER_FLAGS -w)
SET (LIBS curl uuid)
ENDIF(CMAKE_IOS)
PROJECT (iTorrent)
SET (CMAKE_C_FLAGS "-g")
SET (CMAKE_CXX_FLAGS "-g")
AUX_SOURCE_DIRECTORY(. SOURCES)
ADD_EXECUTABLE(iTorrent ${SOURCES})
TARGET_LINK_LIBRARIES(iTorrent ${LIBS})
INSTALL(CODE "EXEC_PROGRAM(./tools/install)")
